@@ -1,18 +1,30 @@
-import java.util.*;
-import java.util.stream.*;
-
 public class TrainConsistApp {
     public static void main(String[] args) {
-        List<Bogie> bogies = Arrays.asList(
+        java.util.List<Bogie> bogies = java.util.Arrays.asList(
                 new Bogie("Sleeper", 72),
                 new Bogie("AC Chair", 56),
                 new Bogie("General", 24)
         );
 
-        List<Bogie> highCapacity = bogies.stream()
+        java.util.List<Bogie> highCapacity = bogies.stream()
                 .filter(b -> b.capacity > 50)
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("High capacity bogies: " + highCapacity);
+    }
+}
+
+class Bogie {
+    String name;
+    int capacity;
+
+    Bogie(String name, int capacity) {
+        this.name = name;
+        this.capacity = capacity;
+    }
+
+    @Override
+    public String toString() {
+        return name + " (" + capacity + ")";
     }
 }
